cluster-custom-resources/quay-ha/namespace-quay-ha.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: quay-ha
  annotations:
    openshift.io/node-selector: 'node-role.kubernetes.io/infra='
    openshift.io/default-tolerations: '[{"operator": "Exists", "effect": "NoSchedule", "key": "node-role.kubernetes.io/infra"}]'
    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"operator": "Exists"}]'
  labels:
    openshift.io/cluster-monitoring: "true"
