cluster-custom-resources/quay-ha/route-quay-ha-reencrypt-custom-certificate.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 10m
  labels:
    app: quay
    quay-component: quay
    quay-operator/quayregistry: quay-ha
  name: quay-ha-quay
  namespace: quay-ha
spec:
  host: quay.caas.ada.junta-andalucia.es
  port:
    targetPort: https
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGTDCCBdKgAwIBAgIUYHcuci0NkjPxVh6MOIS2YjUKvjswCgYIKoZIzj0EAwMw
[...]
      Cc/Owqnkzo3Vmz0y34wJ08wzQwsjpWhiUWeVMVZeAFE=
      -----END CERTIFICATE-----
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEBzCCAu+gAwIBAgIUWRuoxHOY0uEaGNYolaK9E1JBpncwDQYJKoZIhvcNAQEL
[...]
      xPz2Rfy4XWtjepsNoZL/uW1eyWjq0N9cXPIH
      -----END CERTIFICATE-----
    key: |
      -----BEGIN EC PRIVATE KEY-----
      MIGkAgEBBDAsQFDfsRgjjI6duQeTMNBthD8lFC8YndwYqu0CkZCY51iX99VDizuw
[...]
      bOvJbSOrjSaoIIELNC0VPinByG2K1e4=
      -----END EC PRIVATE KEY-----
    termination: reencrypt
  to:
    kind: Service
    name: quay-ha-quay-app
    weight: 100
  wildcardPolicy: None
